// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en el gifGrid  Debe hacer match con el snapshot  1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    Goku
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Loading...
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`Pruebas en el gifGrid  Debe mostrar items cuando se cargan imagenes useFetchGifs 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    Goku
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="sdfdsf97fs7f"
      key="sdfdsf97fs7f"
      title="Goku"
      url="https://localhost/cualquiera.jpg"
    />
    <GifGridItem
      id="ABC"
      key="ABC"
      title="Goku"
      url="https://localhost/cualquiera.jpg"
    />
  </div>
</Fragment>
`;
